; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_crypto.c_bt_mesh_prov_conf.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_crypto.c_bt_mesh_prov_conf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_sg = type { i32, i32* }

@.str = private unnamed_addr constant [19 x i8] c"ConfirmationKey %s\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"RandomDevice %s\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"AuthValue %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bt_mesh_prov_conf(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca [2 x %struct.bt_mesh_sg], align 16
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = getelementptr inbounds [2 x %struct.bt_mesh_sg], [2 x %struct.bt_mesh_sg]* %9, i64 0, i64 0
  %11 = getelementptr inbounds %struct.bt_mesh_sg, %struct.bt_mesh_sg* %10, i32 0, i32 0
  %12 = load i32*, i32** %6, align 8
  %13 = ptrtoint i32* %12 to i32
  store i32 %13, i32* %11, align 16
  %14 = getelementptr inbounds %struct.bt_mesh_sg, %struct.bt_mesh_sg* %10, i32 0, i32 1
  store i32* inttoptr (i64 16 to i32*), i32** %14, align 8
  %15 = getelementptr inbounds %struct.bt_mesh_sg, %struct.bt_mesh_sg* %10, i64 1
  %16 = getelementptr inbounds %struct.bt_mesh_sg, %struct.bt_mesh_sg* %15, i32 0, i32 0
  %17 = load i32*, i32** %7, align 8
  %18 = ptrtoint i32* %17 to i32
  store i32 %18, i32* %16, align 16
  %19 = getelementptr inbounds %struct.bt_mesh_sg, %struct.bt_mesh_sg* %15, i32 0, i32 1
  store i32* inttoptr (i64 16 to i32*), i32** %19, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @bt_hex(i32* %20, i32 16)
  %22 = call i32 @BT_DBG(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %21)
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @bt_hex(i32* %23, i32 16)
  %25 = call i32 @BT_DBG(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %24)
  %26 = load i32*, i32** %7, align 8
  %27 = call i32 @bt_hex(i32* %26, i32 16)
  %28 = call i32 @BT_DBG(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %27)
  %29 = load i32*, i32** %5, align 8
  %30 = getelementptr inbounds [2 x %struct.bt_mesh_sg], [2 x %struct.bt_mesh_sg]* %9, i64 0, i64 0
  %31 = getelementptr inbounds [2 x %struct.bt_mesh_sg], [2 x %struct.bt_mesh_sg]* %9, i64 0, i64 0
  %32 = call i32 @ARRAY_SIZE(%struct.bt_mesh_sg* %31)
  %33 = load i32*, i32** %8, align 8
  %34 = call i32 @bt_mesh_aes_cmac(i32* %29, %struct.bt_mesh_sg* %30, i32 %32, i32* %33)
  ret i32 %34
}

declare dso_local i32 @BT_DBG(i8*, i32) #1

declare dso_local i32 @bt_hex(i32*, i32) #1

declare dso_local i32 @bt_mesh_aes_cmac(i32*, %struct.bt_mesh_sg*, i32, i32*) #1

declare dso_local i32 @ARRAY_SIZE(%struct.bt_mesh_sg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
